css/style.css
@charset "utf-8";

/*-------------------------------------------------------------------

Project:    DIGITAL AGENCY
Version:    1.3
Date created: Aug 9, 2017;
Primary use:  One-page  MultiPurpose Template  
-------------------------------------------------------------------*/


/*------------------------------------------------------------------
[ Table of contents ]

1. Imported Styles 
2. reset css
3. form elements css 
4. header css 
5. Revolution slider custom css
6. clients css 
7. services css 
8. portfolio css 
9. case studies css
10. why-us css
11. success number css 
12. team-members css 
13. pricing plans css
14. news css
15. Maps css
16. contact css
17. footer css 
18. verticaly centered modal css

-------------------------------------------------------------------*/

/*-- 1. Imported Styles 
--------------------------------------- --*/
@import "https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900";


/*-- 2. reset css 
--------------------------------------- --*/
body {
    font-family: "Raleway", sans-serif;
    margin: 0;
    padding: 0;
    color: #333333;
    background: #F2F2F2;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-size: 16px;
    line-height: 26px;
    position: relative;
    overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 600;
}

h1 {
    font-size: 60px;
}

h2 {
    font-size: 30px;
    line-height: 60px;
    color: #FFA500;
    font-weight: 600;
    border-bottom: 1px solid #e9e9e9;
    margin: 0;
    margin-bottom: 50px;
}

h3 {
    font-size: 24px;
    line-height: 30px;
    color: #333333;
    font-weight: 600;
    margin: 0;
}

li {
    list-style: none;
}

a {
    text-decoration: none!important;
}

a,
button,
input {
    outline: 0!important;
}

a,
button,
p,
li,
input,
textarea {
    -webkit-transition-duration: 0.2s;
    transition-duration: 0.2s;
    -webkit-transition-timing-function: ease-in-out;
    transition-timing-function: ease-in-out;
}

.btn,
.navbar-nav>li>a.btn {
    font-size: 14px;
    line-height: 44px;
    padding: 0 20px;
    border: 2px solid #FFA500;
    border-radius: 6px;
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 1px;
}

.btn-primary.disabled,
.btn-primary.disabled.active,
.btn-primary.disabled.focus,
.btn-primary.disabled:active,
.btn-primary.disabled:focus,
.btn-primary.disabled:hover,
.btn-primary[disabled],
.btn-primary[disabled].active,
.btn-primary[disabled].focus,
.btn-primary[disabled]:active,
.btn-primary[disabled]:focus,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary,
fieldset[disabled] .btn-primary.active,
fieldset[disabled] .btn-primary.focus,
fieldset[disabled] .btn-primary:active,
fieldset[disabled] .btn-primary:focus,
fieldset[disabled] .btn-primary:hover {
    border-color: #FFA500;
}

.navbar-nav>li>a.btn {
    line-height: 40px;
}

.btn.btn-primary {
    background: transparent;
    color: #333333;
}

.btn.btn-primary:hover {
    background: #FFA500;
    color: #FFA500;
    border: 2px solid #FFA500;
}

.btn.btn-primary:focus,
.navbar-nav>li>a.btn:focus {
    border: 2px solid #FFA500;
    color: white;
    background: transparent;
}

.btn.btn-secondary {
    background: transparent;
    color: #FFA500;
    border: 2px solid #FFA500;
}

.btn.btn-secondary:hover {
    background: #FFA500;
    color: #333333;
}

.btn [class^="icon-"] {
    margin-left: 2px;
    font-size: 13px;
}

button.close {
    font-size: 30px;
    color: #F2F2F2;
    opacity: 1;
}

/*-- 3.form elements css 
--------------------------------------- --*/
input::-webkit-input-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

input:-moz-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

input::-moz-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

input:-ms-input-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

textarea::-webkit-input-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

textarea:-moz-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

textarea::-moz-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

textarea:-ms-input-placeholder {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
    opacity: 1;
}

form .customised-formgroup {
    position: relative;
    margin-bottom: 0;
    color: #333333;
    padding: 8px 0;
}

form .customised-formgroup input,
form .customised-formgroup textarea {
    border: medium none;
    width: 100%;
    overflow: hidden;
    height: 44px;
    padding: 10px 25px;
    border-bottom: 2px solid #d5d5d5;
}

form .customised-formgroup textarea:focus,
form .customised-formgroup input:focus {
    outline: none;
    border-color: #FFA500;
}

form .customised-formgroup input::-webkit-input-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup input:-moz-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup input::-moz-placeholder {
    font-weight: 400;
}

form .customised-formgroup input:-ms-input-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup textarea::-webkit-input-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup textarea:-moz-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup textarea::-moz-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup textarea:-ms-input-placeholder {
    font-weight: 400;
    line-height: normal;
}

form .customised-formgroup span {
    position: absolute;
    top: 19px;
    left: 0;
    font-size: 17px;
    color: #333333;
}
/* ... */

